# chat

./: Cargo.toml  _typos.toml  cliff.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: encoding.pem
chat_core/src/: lib.rs
chat_core/src/middleware/: auth.rs  mod.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml
chat_server/fixtures/: decoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs
chat_server/src/middleware/: auth.rs  chat.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yaml
chat_test/tests/: chat.rs
migrations/: 20240809011810_initial.sql  20240813075416_workspace.sql  20240822070037_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/examples/: tokio_mpsc.rs
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
