[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test"]
# 2021版本之后要加resolver=2
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chat_core = { path = "./chat_core" }
chat_server = { path = "./chat_server" }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
notify_server = { path = "./notify_server" }
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "trace",
    "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
