[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { workspace = true }
chat_core = { workspace = true }
hex = "0.4.3"
http-body-util = { version = "0.1.2", optional = true }
jwt-simple = { workspace = true }
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.124"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
# 保证自己的测试正常
chat_server ={ workspace = true, features = ["test-util"]}
